# fourinarow

./: data_hvh.csv
AWS Experiment/: .gitignore  .graphqlconfig.yml  index.html  index_questionnare.html  package-lock.json  package.json
AWS Experiment/.parcel-cache/: 44c3568f9ed7534a-AssetGraph-0  7d3d872b02d671a6-AssetGraph-0  9e063c879a3e4ec8.txt  df5040dab5c2f433-BundleGraph-0  lock.mdb
AWS Experiment/amplify/: team-provider-info.json
AWS Experiment/amplify/.config/: project-config.json
AWS Experiment/amplify/backend/: backend-config.json
AWS Experiment/amplify/backend/api/fourinarow/: cli-inputs.json  parameters.json  schema.graphql
AWS Experiment/amplify/backend/api/fourinarowexperiment/: cli-inputs.json  parameters.json  schema.graphql
AWS Experiment/amplify/backend/function/sendData/src/: index.js
AWS Experiment/amplify/backend/types/: amplify-dependent-resources-ref.d.ts
AWS Experiment/public/static/css/: stylesheet.css
AWS Experiment/public/static/js/: 4inarow_base.js  4inarow_psiturk.js  demography_manager.js  questionnaire_file.js
AWS Experiment/src/: 4inarow_standalone.js  amplifyconfiguration.json
AWS Experiment/src/graphql/: mutations.js  queries.js  schema.json  subscriptions.js
AWS Experiment/src/models/: index.d.ts  index.js  schema.js
AWS Experiment/src/static/js/: 4inarow_standalone.js
AWS Experiment/static/js/: 4inarow_base.js  4inarow_standalone.js
GIMPFiles/: HorizontalWin.xcf  VerticalWin.xcf  diagonalWin.xcf  threeWin.xcf
Model code/: CMakeLists.txt  compute_planning_depth.cpp  compute_planning_depth.sh  heuristic.cpp  heuristic.h  params.csv  params_printer.cpp  params_to_csv.cpp  planning_depth_new.cpp  planning_depth_writer.cpp
Model code/New Analysis/: print_planning_depth.cpp
Model code/Peak code/: bfs.cpp  bfs.h  heuristic.h  makemove.cpp
Model code/matlab wrapper/: csv_reader.m  estimate_loglik_ibs.m  estimate_loglik_mex.mexmaca64
